
Known problems:
    1. The "_new" and "_empty" frame targets are not handled correctly
    2. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.
    3. The regression test "pseudo-server" does not appear to run properly under JDK 1.4

Limitations:
    1. HttpUnit does not support JavaScript
    2. JDK 1.2 or higher is required


Revision History:
 1-Aug-2002
Additions:
    1. You may now follow a link by calling link.click() rather than client.getResponse( link.getRequest() ).
    2. You may now submit a form by calling form.submit() rather than client.getResponse( form.getRequest() ). In this
       case you must set any parameters directly into the form.
    3. You may now obtain the current page from a web client by calling client.getCurrentPage() rather than
       client.getFrameContents( "_top" );
    4. Added JavaScript support for form.<text field>.value

29-Jul-2002
Acknowledgements:
    Thanks to Sebastien Rosset for pointing out the case sensitivity problem with WebResponse.isHTML

Problems fixed:
    1. WebResponses are now recognized as HTML even if the content type is not lower case.

Acknowledgements:
    Thanks to Rajan Narasimhan for fixing the relative URL computation problem.

25-Jul-2002
Problems fixed:
    1. Relative URLs were not being computed properly when the base URL had a query string containing a slash.

24-Jul-2002
Additions:
    1. PseudoServer and associated classes are now publically available and in their own package, pseudoserver.
    2. Experimental JavaScript is starting to be added: support is present for the following DOM objects:
         Window  properties: self, window, document   methods: alert,  events: onLoad
         Document properties: title, forms, <form name>

15-Jul-2002
Problems fixed:
    1. The "_parent" frame target should now be handled correctly.

10-Jul-2002
Additions: